--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -14,7 +14,7 @@
         <span data-placeholder="Password"></span>
       </div>
 
-      <input type="submit" class="logbtn" value="Connexion" id="submit-login">
+      <input type="submit" class="logbtn" value="Log in" id="submit-login">
 
       <hr />
       <div class="bottom-text mt-4">
