--- a/views/restricted/Gallery-patch.ejs
+++ b/views/restricted/Gallery-patch.ejs
@@ -32,42 +32,55 @@
         <input type="submit" class="delbtn" value="DELETE" id="delete-blog">
     </form>
 </div>
+
 <script>
-        let tagInput = $("#tagInput");
-        let tags = "<%= locals.tags %>";
-        tags = tags.split(',')
+    let tagInput = $("#tagInput");
+    let tags = "<%= locals.tags %>";
+    tags = tags.split(',')
 
-        tagInput.tagsinput('add', "");
+    tagInput.tagsinput('add', "");
 
-        // Load tags from db and put them in the input field
-        for (i = 0; i < tags.length; i++)
-            tagInput.tagsinput('add', tags[i]);
+    // Load tags from db and put them in the input field
+    for (i = 0; i < tags.length; i++)
+        tagInput.tagsinput('add', tags[i]);
        
-        async function patchGallery(e) {
-            e.preventDefault();
-            let tagInput = document.getElementsByClassName("label-info"),
-                title = $("#title").val(),
-                content = $("#content").val(),
-                img = document.querySelector('#img'),
-                formData = new FormData(),
-                tags = [];
+    async function patchGallery(e) {
+        e.preventDefault();
+        let tagInput = document.getElementsByClassName("label-info"),
+            title = $("#title").val(),
+            content = $("#content").val(),
+            img = document.querySelector('#img'),
+            formData = new FormData(),
+            tags = [];
             
-            for (i = 0; i < tagInput.length; i++)
-                tags.push(tagInput[i].textContent);
+        for (i = 0; i < tagInput.length; i++)
+            tags.push(tagInput[i].textContent);
     
-            formData.append('img', img.files[0]);
-            formData.append('title', title);
-            formData.append('content', content);
-            formData.append('tags', JSON.stringify(tags));
+        formData.append('img', img.files[0]);
+        formData.append('title', title);
+        formData.append('content', content);
+        formData.append('tags', JSON.stringify(tags));
             
-            const response = await fetch('/api/gallery/patch/<%= locals._id %>', {
-                method: 'post',
-                mode: 'same-origin',
-                body: formData
-            })
-            window.location.href = "/Galerie";
-        }
-        </script>
+        fetch('/api/gallery/patch/<%= locals._id %>', {
+            method: 'post',
+            mode: 'same-origin',
+            body: formData
+        })
+        .then(response => response.json())
+        .then(data => {
+        if (data.err) {
+            let alert = `
+            <div id="alert" class="alert alert-warning" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+                ${data.msg}
+            </div>`;
+            addAlert(alert, "#header")
+        } else 
+            console.log(data)
+            window.location.href = data.url                
+        })
+    }
+</script>
     <script src="/scripts/frontValidation.js"></script>
     <script src="/scripts/formFocus.js"></script>
 </div>
