--- a/views/Galerie.ejs
+++ b/views/Galerie.ejs
@@ -38,12 +38,11 @@
     let expand = $("#expandImg");
     expand.src = image.src;
     expand.attr("src", image.src)
-
   }
 </script>
 <% include partials/footer %>
 
-<a class="lightbox-close" href="#">
+<a class="lightbox-close" href="#close">
   <div class="lightbox-target" id="expand">
     <img id="expandImg" src="/api/gallery/image/<%= locals.galleries[0]._id %>"/>
   </div>
