changed mailer to be usable more globally, working on lost pw functions, base working, need to add security steps

--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -18,6 +18,7 @@
 
       <hr />
       <div class="bottom-text mt-4">
+          <a href="/Lostpw">Mot de passe oublié?</a><br />
         Pas encore de compte? Créez en un <a href="/Register">ici</a>
       </div>
     </form>
