refactored auth blogs galleries and user controller and their functions, added better error handling

--- a/views/Blog.ejs
+++ b/views/Blog.ejs
@@ -1,6 +1,6 @@
 <% include partials/head %>
 
-<script src="/scripts/infiniteScroll.js"></script>
+<script src="/scripts/infiniteBlogs.js"></script>
 <div class="container-fluid"> 
     <% if (locals.level && locals.level > 1) { %>
       <div class="alert alert-info" role="alert">
