--- a/views/Contact.ejs
+++ b/views/Contact.ejs
@@ -8,24 +8,24 @@
                 Nous avons besoin de votre email pour pouvoir vous répondre, et le nom d'utilisateur est à titre indicatif
             </div>
             <div class="txtb">
-                <input type="text" name="name" id="name" onkeyup="Validate.Username(this);" value="<% if (locals.name) { %><%= locals.name %><% } %>" required>
+                <input type="text" name="name" id="name" onkeyup="Validate.Username(this);" value="<% if (locals.formData) { %><%= locals.formData.name %><% } %>" required>
                 <span data-placeholder="Username"></span>
                 <span id="i_name" class="form-info">Username must contain between 4 and 30 characters</span>
             </div>
             
             <div class="txtb">
-                <input type="email" name="email" id="email" onkeyup="Validate.Email(this);" value="<% if (locals.email) { %><%= locals.email %><% } %>" required>
+                <input type="email" name="email" id="email" onkeyup="Validate.Email(this);" value="<% if (locals.formData) { %><%= locals.formData.email %><% } %>" required>
                 <span data-placeholder="Email"></span>
                 <span id="i_email" class="form-info">E-mail has to be valid</span>
             </div>
             
             <div class="txtb">
-                <input type="text" name="title" id="title" onkeyup="Validate.String(this, 10, 256);" required>
+                <input type="text" name="title" id="title" onkeyup="Validate.String(this, 10, 256);" value="<% if (locals.formData) { %><%= locals.formData.subject %><% } %>" required>
                 <span data-placeholder="Mail Title"></span>
                 <span id="i_title" class="form-info">Title must contain between 10 and 256 characters</span>
             </div>
 
-            <textarea id="content" onkeyup="Validate.String(this, 64, 2048);" class="blog-textarea" name="content" placeholder="Whatever you wish to tell us..." required></textarea>
+            <textarea id="content" onkeyup="Validate.String(this, 64, 2048);" class="blog-textarea" name="content" placeholder="Whatever you wish to tell us..." required><% if (locals.formData) { %><%= locals.formData.content %><% } %></textarea>
             <span id="i_content" class="form-info">Content must contain between 64 and 2048 characters</span>
             
             <input type="submit" class="logbtn" value="Envoyer" id="submit-contact">
