--- a/views/Register.ejs
+++ b/views/Register.ejs
@@ -6,13 +6,13 @@
         <h1 class="form-title">Inscription</h1>
 
         <div class="txtb">
-          <input type="text" name="name" id="name" onkeyup="Validate.String(this, 4, 30);" value="<% if (locals.name) { %><%= locals.name %><% } %>" required>
+          <input type="text" name="name" id="name" onkeyup="Validate.String(this, 4, 30);" value="<% if (locals.formData) { %><%= locals.formData.name %><% } %>" required>
           <span data-placeholder="Username"></span>
           <span id="i_name" class="form-info">Username must contain between 4 and 30 characters</span>
         </div>
 
         <div class="txtb">
-          <input type="email" name="email" id="email" onkeyup="Validate.Email(this);"  value="<% if (locals.email) { %><%= locals.email %><% } %>" required>
+          <input type="email" name="email" id="email" onkeyup="Validate.Email(this);"  value="<% if (locals.formData) { %><%= locals.formData.email %><% } %>" required>
           <span data-placeholder="Email"></span>
           <span id="i_email" class="form-info">E-mail has to be valid</span>
         </div>
