--- a/views/restricted/Blog-post.ejs
+++ b/views/restricted/Blog-post.ejs
@@ -5,12 +5,12 @@
         <h1 class="form-title">Rédiger un post de blog</h1>
             
         <div class="txtb">
-            <input id="title" type="text" name="title" onkeyup="Validate.String(this, 4, 256);" required>
+            <input id="title" type="text" name="title" onkeyup="Validate.String(this, 4, 256);" value="<% if (locals.formData) { %><%= locals.formData.title %><% } %>" required>
             <span data-placeholder="Title"></span>
             <span id="i_title" class="form-info">Title must contain between 4 and 256 characters</span>
         </div>
 
-        <textarea id="content" class="blog-textarea" name="content" placeholder="Your blog content here" onkeyup="Validate.String(this, 128, 4096);" required></textarea>
+        <textarea id="content" class="blog-textarea" name="content" placeholder="Your blog content here" onkeyup="Validate.String(this, 128, 4096);" required><% if (locals.formData) { %><%= locals.formData.content %><% } %></textarea>
         <span id="i_content" class="form-info">Content must contain between 128 and 4096 characters</span>
 
         <input type="submit" class="logbtn" value="Save" id="submit-blog">
